{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 63,
  "lineage": "fab050ef-a346-be5a-71fb-e97ffa1210ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkinsserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e731c8a588258d0d",
            "arn": "arn:aws:ec2:us-east-1:533267316165:instance/i-0b3b6285954a74879",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3b6285954a74879",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024bff6ad65a5a48c",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.170",
            "public_ip": "3.93.21.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088d4b4d0b4ced138",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0d1be2c8620fbc6",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059cf35e5e4521b86"
            ]
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraformni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:network-interface/eni-02e08b3e54c462764",
            "id": "eni-02e08b3e54c462764",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:34:1d:e4:8b:61",
            "owner_id": "533267316165",
            "private_ip": "10.0.1.180",
            "private_ip_list": [
              "10.0.1.180"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.180"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-059cf35e5e4521b86"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0d1be2c8620fbc6"
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teerraformsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:security-group/sg-0a1ee243f4e4ae146",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1ee243f4e4ae146",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "533267316165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teerraform-sg"
            },
            "tags_all": {
              "Name": "teerraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-027a1cf52e82e6853"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:subnet/subnet-0d0d1be2c8620fbc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d1be2c8620fbc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267316165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-027a1cf52e82e6853"
          },
          "dependencies": [
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "useast1vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:vpc/vpc-027a1cf52e82e6853",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b02b201e273030eb",
            "default_route_table_id": "rtb-03e8f5ca694b0a168",
            "default_security_group_id": "sg-059cf35e5e4521b86",
            "dhcp_options_id": "dopt-0b7bca6f87bcf31d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027a1cf52e82e6853",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e8f5ca694b0a168",
            "owner_id": "533267316165",
            "tags": {
              "Name": "useast1-vpc"
            },
            "tags_all": {
              "Name": "useast1-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:security-group-rule/sgr-025661bd9a0fc4d79",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-025661bd9a0fc4d79",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1ee243f4e4ae146",
            "security_group_rule_id": "sgr-025661bd9a0fc4d79",
            "tags": {
              "Name": "sg-egress"
            },
            "tags_all": {
              "Name": "sg-egress"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.teerraformsg",
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267316165:security-group-rule/sgr-0e0305b9c67e1a764",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0e0305b9c67e1a764",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1ee243f4e4ae146",
            "security_group_rule_id": "sgr-0e0305b9c67e1a764",
            "tags": {
              "Name": "sg-ingress"
            },
            "tags_all": {
              "Name": "sg-ingress"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.teerraformsg",
            "aws_vpc.useast1vpc"
          ]
        }
      ]
    }
  ]
}